# nier-replicant-pt-br-translation

./: .editorconfig  .gitignore  Makefile  README.en.md  README.md  main.py  pyproject.toml
config/: __init__.py  chat-gpt.toml  cli.toml  config.py  export-config.json  settings.toml  typer.toml
config/dpf/: nier-replicant-preset.dpf
config/json/: export-config.json
config/toml/: chat-gpt.toml  cli.toml  github.toml  settings.toml  translator.toml  typer.toml
data/: info.arc
patch/data/: info.arc
patch/source/: caption_all  info_all  radio_all  text_common
src/chat_gpt/: __init__.py  bot.py  openai.py  py_chat_gpt.py  unlimited_gpt.py
src/commands/: apply_dlc.py  extractor.py  install.py  manager.py  reimport.py  translator.py  uninstall.py  update.py
src/commands/translation_builder/: __init__.py  builder.py  extract_assets.py  extract_texts.py  generate.py  make_translation_folder.py  translator.py
src/commands/translation_manager/: __init__.py  install.py  manager.py  uninstall.py  update.py
src/miscellaneous/: __init__.py  github.py  nier_path.py  translation.py
src/reviewer_engine/: __init__.py  chat_gpt_reviewer.py  reviewer_engine.py
src/translator_engine/: __init__.py  chat_gpt_translator.py  conventional_translator.py  translator_engine.py
src/unused/: wrapper.py
src/utils/: __init__.py  http_request_utils.py  list_utils.py  nier_path.py  nier_text_csv_utils.py  path_utils.py  string_utils.py  zip_utils.py
texts/pt-1/caption_all/: EID_0050_a0010.en.cap.csv  EID_0050_a0020.en.cap.csv  EID_0050_a0050.en.cap.csv  (+60 more)
(+1577 files in other folders)
