[tool.poetry]
name = "nier-replicant-pt-br-translation"
version = "2.1.2"
description = "Aplicação para instalar e criar traduções para o NieR Replicant™ ver.1.22474487139..."
authors = ["arekushi <alexandre.ferreira1445@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
translators = "^5.6.3"
pandas = "^1.5.3"
tqdm = "^4.65.0"
dynaconf = "^3.1.12"
openai = "^0.27.2"
progress = "^1.6"
nest-asyncio = "^1.5.6"
pychatgpt = "^0.4.3.3"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
typer = {extras = ["all"], version = "^0.7.0"}
pyinstaller = "^5.9.0"
auto-py-to-exe = "^2.33.0"
unlimitedgpt = "^0.1.9.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
